samples/_failures_safe/1760888279_c72c1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cca02dbf.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_cca02dbf.c:168:5: error: expected declaration or statement at end of input
  168 |     return left;
      |     ^~~~~~
